[gd_scene load_steps=22 format=3 uid="uid://drmh3aiglbywb"]

[ext_resource type="Script" path="res://coin.gd" id="1_g4d8t"]
[ext_resource type="Texture2D" uid="uid://ca0010j5m73w2" path="res://assets/coin_animation/image 1.png" id="2_pi1s3"]
[ext_resource type="Texture2D" uid="uid://c5si2kinjgjb8" path="res://assets/coin_animation/image 2.png" id="3_avo3p"]
[ext_resource type="Texture2D" uid="uid://goiaybca35ch" path="res://assets/coin_animation/image 3.png" id="4_dq8o3"]
[ext_resource type="Texture2D" uid="uid://d03tuaacbwlma" path="res://assets/coin_animation/image 4.png" id="5_yhfci"]
[ext_resource type="Texture2D" uid="uid://7yahcfnacsxn" path="res://assets/coin_animation/image 5.png" id="6_cqmr3"]
[ext_resource type="Texture2D" uid="uid://dkrvwrc1pphsp" path="res://assets/coin_animation/image 6.png" id="7_3wj66"]
[ext_resource type="Texture2D" uid="uid://dc73b12coinau" path="res://assets/coin_animation/image 7.png" id="8_42n52"]
[ext_resource type="Texture2D" uid="uid://d153hw8itibfe" path="res://assets/coin_animation/image 8.png" id="9_5p7aj"]
[ext_resource type="Texture2D" uid="uid://c58x4ymscjgsm" path="res://assets/coin_animation/image 9.png" id="10_6yuwj"]
[ext_resource type="Texture2D" uid="uid://b15om4isl82b" path="res://assets/coin_animation/image 10.png" id="11_ddw17"]
[ext_resource type="Texture2D" uid="uid://cq2gommv87o56" path="res://assets/coin_animation/image 11.png" id="12_5k2yo"]
[ext_resource type="Texture2D" uid="uid://c54bap5wexvou" path="res://assets/coin_animation/image 12.png" id="13_fm65g"]
[ext_resource type="Texture2D" uid="uid://wqb1gmy2e0k7" path="res://assets/coin_animation/image 13.png" id="14_b8bxl"]
[ext_resource type="Texture2D" uid="uid://od3o0jy6gave" path="res://assets/coin_animation/image 14.png" id="15_0mohb"]
[ext_resource type="Texture2D" uid="uid://baek61cysjmg0" path="res://assets/coin_animation/image 15.png" id="16_ykwej"]
[ext_resource type="Texture2D" uid="uid://otkm0qk6581m" path="res://assets/coin_animation/image 16.png" id="17_xaur8"]
[ext_resource type="Texture2D" uid="uid://cqnw6i0mbk5a3" path="res://assets/tear.png" id="18_t32af"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_46pip"]
radius = 25.0
height = 58.0

[sub_resource type="SpriteFrames" id="SpriteFrames_unugl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pi1s3")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pi1s3")
}, {
"duration": 1.0,
"texture": ExtResource("3_avo3p")
}, {
"duration": 1.0,
"texture": ExtResource("4_dq8o3")
}, {
"duration": 1.0,
"texture": ExtResource("5_yhfci")
}, {
"duration": 1.0,
"texture": ExtResource("6_cqmr3")
}, {
"duration": 1.0,
"texture": ExtResource("7_3wj66")
}, {
"duration": 1.0,
"texture": ExtResource("8_42n52")
}, {
"duration": 1.0,
"texture": ExtResource("9_5p7aj")
}, {
"duration": 1.0,
"texture": ExtResource("10_6yuwj")
}, {
"duration": 1.0,
"texture": ExtResource("11_ddw17")
}, {
"duration": 1.0,
"texture": ExtResource("12_5k2yo")
}, {
"duration": 1.0,
"texture": ExtResource("13_fm65g")
}, {
"duration": 1.0,
"texture": ExtResource("14_b8bxl")
}, {
"duration": 1.0,
"texture": ExtResource("15_0mohb")
}, {
"duration": 1.0,
"texture": ExtResource("16_ykwej")
}, {
"duration": 1.0,
"texture": ExtResource("17_xaur8")
}],
"loop": true,
"name": &"spin",
"speed": 8.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3sa4d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_t32af")
}],
"loop": true,
"name": &"tear",
"speed": 5.0
}]

[node name="coin" type="Area2D"]
script = ExtResource("1_g4d8t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -2)
shape = SubResource("CapsuleShape2D_46pip")

[node name="coin_anim" type="AnimatedSprite2D" parent="CollisionShape2D"]
position = Vector2(-1.5, 3)
scale = Vector2(0.519531, 0.519531)
sprite_frames = SubResource("SpriteFrames_unugl")
animation = &"Idle"
speed_scale = 2.0

[node name="tear_anim" type="AnimatedSprite2D" parent="CollisionShape2D"]
position = Vector2(-0.5, -3)
scale = Vector2(0.17096, 0.17096)
sprite_frames = SubResource("SpriteFrames_3sa4d")
animation = &"tear"

[node name="blank_for_now" type="Label" parent="."]
offset_left = -50.0
offset_top = 154.0
offset_right = 104.0
offset_bottom = 233.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
